@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.4
                     ---------------------------------
 
+ * added CaptionPanel (see showcase)
+
  * the pyjs compiler now uses the pyjs.path variable using the same
    semantics as sys.path in python to find python module files to be
    compiled to javascript. the path can also be set via the
